# evallab

./: .gitignore  CLAUDE.md  LICENSE  README.md  render.yaml
.claude/: settings.json
.github/: SPEC.md
apps/api/: .env.example  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py  0002_ai_insights.py  0003_human_scores.py  0004_agent_versions.py  0005_test_set_domain_context.py  0006_dimensions_and_tokens.py
apps/api/src/: config.py  db.py  deps.py  main.py  models.py  schemas.py
apps/api/src/routes/: agents.py  calibration.py  debug.py  health.py  runs.py  seeds.py  test_cases.py  test_sets.py  usage.py
apps/api/src/seeds/: code_review_v1.py  load_all.py  mental_health_v1.py  sms_support_v1.py
apps/api/src/services/: calibration.py  clustering.py  diff_analyzer.py  exporter.py  judge.py  llm.py  pricing.py  runner.py  stats.py
apps/api/tests/: conftest.py  test_calibration.py  test_exporter.py  test_judge.py  test_pricing.py  test_rate_limiter.py  test_runner.py  test_stats.py
apps/web/: .env.local.example  package.json  pnpm-lock.yaml
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/agents/: page.tsx
apps/web/src/app/agents/[id]/: page.tsx
apps/web/src/app/agents/new/: page.tsx
apps/web/src/app/compare/: page.tsx
apps/web/src/app/runs/: page.tsx
apps/web/src/app/runs/[id]/: page.tsx
apps/web/src/app/runs/[id]/calibrate/: page.tsx
apps/web/src/app/runs/new/: page.tsx
apps/web/src/app/test-sets/: page.tsx
apps/web/src/app/test-sets/[id]/: page.tsx
apps/web/src/app/test-sets/new/: page.tsx
apps/web/src/components/: agent-form.tsx  empty-state.tsx  featured-comparison.tsx  grain-overlay.tsx  nav.tsx  page-header.tsx  quota-meter.tsx  stat-strip.tsx  step-rail.tsx  theme-toggle.tsx  tour.tsx  wake-up-banner.tsx
apps/web/src/components/lab/: badge.tsx  button.tsx  card.tsx
apps/web/src/components/ui/: badge.tsx  button.tsx  card.tsx
apps/web/src/lib/: api.ts  download.ts  format.ts  types.ts
plans/: README.md  phase-1.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md  phase-6.md  phase-7.md
