[project]
name = "evallab-api"
version = "0.1.0"
description = "EvalLab backend — LLM evaluation pipeline"
readme = "../../README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic-settings>=2.6",
    "python-multipart>=0.0.20",
    "openai>=1.55",
]

[dependency-groups]
dev = [
    "mypy>=1.13",
    "ruff>=0.8",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
# B008: FastAPI uses Depends()/Query()/File() in argument defaults by design.
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
# Seed data has long natural-language strings that don't fit on one line cleanly.
"src/seeds/*.py" = ["E501"]
# LLM system prompts are long natural-language strings; reflowing hurts readability
# and changes what the model sees.
"src/services/judge.py" = ["E501"]
"src/services/clustering.py" = ["E501"]
"src/services/diff_analyzer.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
